# langchain

./: README.md
email_assistant/: .gitignore  OAuth Setup.py  get_token_application.py  get_token_delegated.py  msgraph_version.py  pyproject.toml  service.py
email_assistant/MicrosoftGraphAPI/: get_token.py
email_assistant/email_assistant/: prompts.py  schemas.py  utils.py
email_assistant/email_assistant/tools/: base.py
email_assistant/notebooks/: main.ipynb
langchain/: Multi_modal_RAG copy.ipynb  Multi_modal_RAG.ipynb  README.md  azure_chat_openai copy.ipynb  hierarchical-planning-agent.ipynb  json-explorer-agent.ipynb  jsonplaceholder_openapi.yaml  openapi.ipynb  pyproject.toml  requests.ipynb
langgraph/: 6-time-travel.ipynb  add-memory.ipynb  apisguru_tools.py  chat_models_universal_init.ipynb  configuration.py  exec-test.py  hierarchical-planning-agent.ipynb  json-schema-to-pydantic.ipynb  jsonplaceholder_openapi.json  langgraph.json  map-reduce-and-the-send-api.ipynb  mocker.py  mockserver_openapi.json  mockserver_tools.py  moviesApi.py  openapi-new-tools.ipynb  openapi-tools.ipynb  openapi2tools-test.py  openapi3-parser.ipynb  pyproject.toml  report-generator.ipynb  report-generator.py  requests-tools.ipynb  sql-agent.ipynb  sql_database.ipynb  sql_qa.ipynb  test.html  test.py  time-travel.ipynb  tool-calling.ipynb  tools.ipynb  tools.py  workflow.ipynb  workflow.py
office365/: email_assistant.py  endpoint.py  get_token_application.py  get_token_delegated.py  langgraph.json  main.py  mock_webhook.py  o365_test.py  pyproject.toml
office365/MicrosoftGraphAPI/: webhook_create.py
office365/email_assistant/: email_assistant.py
office365/email_assistant/tools/default/: email_tools.py
office365/email_assistant/tools/office365/: run_ingest.py
office365/tools/: __init__.py
office365/tools/office365/: office365_tools.py  run_ingest.py
